@@ -206,6 +206,62 @@
   <metadata name="cmLibrary.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>452, 17</value>
   </metadata>
+  <metadata name="imageListTree.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>853, 17</value>
+  </metadata>
+  <data name="imageListTree.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC4
+        CgAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABFgEAARYBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABWAMAARYDAAEBAQABCAUAAZABBxgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
+        AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
+        AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
+        AwABZgMAAZkDAAHMAgABMwMAAjMCAAEzAWYCAAEzAZkCAAEzAcwCAAEzAf8CAAFmAwABZgEzAgACZgIA
+        AWYBmQIAAWYBzAIAAWYB/wIAAZkDAAGZATMCAAGZAWYCAAKZAgABmQHMAgABmQH/AgABzAMAAcwBMwIA
+        AcwBZgIAAcwBmQIAAswCAAHMAf8CAAH/AWYCAAH/AZkCAAH/AcwBAAEzAf8CAAH/AQABMwEAATMBAAFm
+        AQABMwEAAZkBAAEzAQABzAEAATMBAAH/AQAB/wEzAgADMwEAAjMBZgEAAjMBmQEAAjMBzAEAAjMB/wEA
+        ATMBZgIAATMBZgEzAQABMwJmAQABMwFmAZkBAAEzAWYBzAEAATMBZgH/AQABMwGZAgABMwGZATMBAAEz
+        AZkBZgEAATMCmQEAATMBmQHMAQABMwGZAf8BAAEzAcwCAAEzAcwBMwEAATMBzAFmAQABMwHMAZkBAAEz
+        AswBAAEzAcwB/wEAATMB/wEzAQABMwH/AWYBAAEzAf8BmQEAATMB/wHMAQABMwL/AQABZgMAAWYBAAEz
+        AQABZgEAAWYBAAFmAQABmQEAAWYBAAHMAQABZgEAAf8BAAFmATMCAAFmAjMBAAFmATMBZgEAAWYBMwGZ
+        AQABZgEzAcwBAAFmATMB/wEAAmYCAAJmATMBAANmAQACZgGZAQACZgHMAQABZgGZAgABZgGZATMBAAFm
+        AZkBZgEAAWYCmQEAAWYBmQHMAQABZgGZAf8BAAFmAcwCAAFmAcwBMwEAAWYBzAGZAQABZgLMAQABZgHM
+        Af8BAAFmAf8CAAFmAf8BMwEAAWYB/wGZAQABZgH/AcwBAAHMAQAB/wEAAf8BAAHMAQACmQIAAZkBMwGZ
+        AQABmQEAAZkBAAGZAQABzAEAAZkDAAGZAjMBAAGZAQABZgEAAZkBMwHMAQABmQEAAf8BAAGZAWYCAAGZ
+        AWYBMwEAAZkBMwFmAQABmQFmAZkBAAGZAWYBzAEAAZkBMwH/AQACmQEzAQACmQFmAQADmQEAApkBzAEA
+        ApkB/wEAAZkBzAIAAZkBzAEzAQABZgHMAWYBAAGZAcwBmQEAAZkCzAEAAZkBzAH/AQABmQH/AgABmQH/
+        ATMBAAGZAcwBZgEAAZkB/wGZAQABmQH/AcwBAAGZAv8BAAHMAwABmQEAATMBAAHMAQABZgEAAcwBAAGZ
+        AQABzAEAAcwBAAGZATMCAAHMAjMBAAHMATMBZgEAAcwBMwGZAQABzAEzAcwBAAHMATMB/wEAAcwBZgIA
+        AcwBZgEzAQABmQJmAQABzAFmAZkBAAHMAWYBzAEAAZkBZgH/AQABzAGZAgABzAGZATMBAAHMAZkBZgEA
+        AcwCmQEAAcwBmQHMAQABzAGZAf8BAALMAgACzAEzAQACzAFmAQACzAGZAQADzAEAAswB/wEAAcwB/wIA
+        AcwB/wEzAQABmQH/AWYBAAHMAf8BmQEAAcwB/wHMAQABzAL/AQABzAEAATMBAAH/AQABZgEAAf8BAAGZ
+        AQABzAEzAgAB/wIzAQAB/wEzAWYBAAH/ATMBmQEAAf8BMwHMAQAB/wEzAf8BAAH/AWYCAAH/AWYBMwEA
+        AcwCZgEAAf8BZgGZAQAB/wFmAcwBAAHMAWYB/wEAAf8BmQIAAf8BmQEzAQAB/wGZAWYBAAH/ApkBAAH/
+        AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
+        ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
+        AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/CAAB/wgAAu9KAAH/
+        AfQBBwG8AgcB9AH/BAAB9wG1AfcGABLvLwAC/wHwAZIB8wH/AfIB8QL3AQcB8wH0Af8B7wG7AbQBkgUA
+        Ae8B8wfyB/MB9AHvLwAB/wG8Ae8B7QH/BfQB8QHvAfcCkgEJArQB7QH/AwAB7wH/BPMK9AH/Ae8vAAH0
+        ArwBkgr0AbsBCQO0AZIDAAHvAfQG8wj0Af8B7y0AAv8B8gLxAe8I9ALyAe8BCQO7AZEDAAHvAf8F8wn0
+        Af8B7y0AAf8B9APzAe8B/wf0AvIB7wIJArsBkQMAAe8B/wTzCvQB/wHvLQAF/wEHBP8E9ALyAQcBCQO7
+        AZEDAAHvAf8D8wr0Av8B7zIAAfAH/wHzAvIBuwEZAQkBuwEJAZEDAAHvAf8C8wv0Av8B7zIAAf8BBwb/
+        AvMBBwEZBAkBkQMAAe8B/wHzCvQE/wHvMwABBwH0Bf8C8wEHARkBCQEZAgkBkQMAAe8B/wv0BP8B7zMA
+        AQcB9AX/AvMBBwQZAQkBkQMAAe8B/wn0Bv8B7zMAAQcB9AX/AfQB8wEHBRkBkQMAAe8B/wb0Cf8B7zMA
+        AQcB9AX/AfQB8wEHBRkBkQMAAe8B/wX0Cv8B7zMAAQcB9AX/AfQB8wHuBRkBkQMAAe8B/wT0C/8B7zMA
+        AQcG/wH0AfMB7gH0BBkBkQMAAe8B/wL0Df8B7zMAAQcG/wH0AfMBBwH0BBkB7AMAAe8B/wH0Dv8B7zMA
+        AQcH/wH0AfAE9AEZAewDAAHvEP8B7zMAAQcI/wHxARkB9QP0AewDAAHvEP8B7zMAAfEB9Af/AfMC8AHz
+        AfUB9AHsAwAB7w7/AfQB/wHvMwAB/wUHAfIB8wH0Av8B8wLwAfUB9wMAAe8N/wL0Af8B7zYAAv8D8QK8
+        AgcD7wH3AwAS7y0AAUIBTQE+BwABPgMAASgDAAFYAwABFgMAAQEBAAEBBQABCAEBFgAD/wEAAf4B/wE/
+        Av8B8AYAAfABDwEfAYABAAEQBgABwAEAAQ8BgAEAARAGAAHAAQABAwGAAQABEAYAAcABAAEDAYABAAEQ
+        CAABAwGAAQABEAgAAQMBgAEAARAIAAEDAYABAAEQBgAB+AEAAQMBgAEAARAGAAH4AQABAwGAAQABEAYA
+        AfwBAAEDAYABAAEQBgAB/AEAAQMBgAEAARAGAAH8AQABAwGAAQABEAYAAfwBAAEDAYABAAEQBgAB/AEA
+        AQMBgAEAARAGAAH8AQABAwGAAQABEAYAAfwBAAEDAYABAAEQBgAB/AEAAQMBgAEAARAGAAH8AQABAwGA
+        AQABEAYAAfwBAAEDAYABAAEQBgAB/AEAAQMBgAEAARAGAAH/AYABAwGAAQABEAYACw==
+</value>
+  </data>
   <metadata name="bwUpdateCardList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>557, 17</value>
   </metadata>
